hello_word/hello_world/deployment-hw.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-tp
  labels:
    app: dev-tp
    tier: devops
spec:
  selector:
    matchLabels:
      app: dev-tp
  replicas: 3
  template:
    metadata:
      labels:
        app: dev-tp
    spec:
      containers:
        - name: dev-tp
          image: dockercloud/dev-tp
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
