hello_word/hello_world/service-hw.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
spec:
  selector:
    app: dev-tp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
