hello_word/hello_world/ingress-hw.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
spec:
  rules:
    - host: hello-world.mehdi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-service
                port:
                  number: 80
